crates/deadline-cli/tests/snapshots/cli_common__help_long_flag_prints_usage.snap
---
source: crates/deadline-cli/tests/cli_common.rs
info:
  program: deadline
  args:
    - "--help"
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:51291"
    AWS_ENDPOINT_URL_STS: "http://localhost:51291"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpBNhtia/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpBNhtia
---
success: true
exit_code: 0
----- stdout -----
Interact with AWS Deadline Cloud to submit, monitor, and manage render jobs.

Learn more about Deadline Cloud (https://docs.aws.amazon.com/deadline-cloud/latest/userguide/what-is-deadline-cloud.html)

Usage: deadline [OPTIONS] [COMMAND]

Commands:
  config  View and update workstation configuration
  auth    Manage authentication for Deadline Cloud
  farm    List or get Deadline Cloud farms
  fleet   List or get Deadline Cloud fleets
  queue   List or get Deadline Cloud queues
  job     List or get Deadline Cloud jobs
  worker  List or get Deadline Cloud workers
  help    Print this message or the help of the given subcommand(s)

Options:
      --log-level <LOG_LEVEL>
          Set the logging level
      --redirect-output <REDIRECT_OUTPUT>
          Redirect stdout and stderr to the specified file
      --redirect-mode <REDIRECT_MODE>
          When using --redirect-output, append (default) or replace the file [default: append] [possible values: append, replace]
  -h, --help
          Print help
  -V, --version
          Print version

----- stderr -----
